--- a/manifest.json
+++ b/manifest.json
@@ -3,9 +3,10 @@
 
   "name": "Sakai Plus",
   "description": "This extension enhances the functionality of JI-Sakai",
-  "version": "0.1",
+  "version": "0.1.1",
+  "icons": { "16": "icons/icon-16.png", "48": "icons/icon-48.png", "128": "icons/icon-128.png" },
   "browser_action": {
-    "default_icon": "icon.png",
+    "default_icon": "icons/icon-19.png",
     "default_title": "Sakai Plus, enhance your Sakai experience!"
   },
   "content_scripts": [
