--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 
   "name": "Sakai Plus",
   "description": "This extension enhances the functionality of JI-Sakai",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "icons": { "16": "icons/icon-16.png", "48": "icons/icon-48.png", "128": "icons/icon-128.png" },
   "browser_action": {
     "default_icon": "icons/icon-19.png",
@@ -19,7 +19,9 @@
     "scripts": ["jquery-1.9.1.min.js", "background.js"]
   },
   "permissions": [
-    "tabs", "http://sakai.umji.sjtu.edu.cn/*"
+    "tabs",
+    "notifications",
+    "http://sakai.umji.sjtu.edu.cn/*"
   ],
   "options_page": "option.html"
 }
