--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 
   "name": "Sakai Plus",
   "description": "This extension enhances the functionality of JI-Sakai",
-  "version": "0.2.5",
+  "version": "0.2.6",
   "icons": { "16": "icons/icon-16.png", "48": "icons/icon-48.png", "128": "icons/icon-128.png" },
   "browser_action": {
     "default_icon": "icons/icon-19.png",
@@ -23,5 +23,6 @@
     "notifications",
     "http://sakai.umji.sjtu.edu.cn/*"
   ],
-  "options_page": "option.html"
+  "options_page": "option.html",
+  "content_security_policy": "script-src 'self' https://ssl.google-analytics.com; object-src 'self'"
 }
